# retail-calculator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/retail_calculator/: __init__.py  app.py  config.py
src/retail_calculator/api/: routes.py  schemas.py  utils.py  views.py
src/retail_calculator/db/: __init__.py  models.py  payload.py  repository.py  utils.py
src/retail_calculator/docs/: db.puml
tests/: conftest.py  test_helper.py  test_retail_calculator_api.py  test_retail_calculator_unit.py
